healthchecks/egress-healthchecks.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-healthchecks
  namespace: healthchecks
spec:
  selector: app == 'healthchecks'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 443
          - 587
